@@ -1,6 +1,6 @@
 <?PHP
 
-$plugin->version  = 2012010700;
+$plugin->version  = 2012011000;
 $plugin->requires = 2011070102.03;
 
 ?>
